--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
   Theme Name: LHG-Theme 2022
   Author: Katharina Lauterbach & Maxi Wiegand
   Description: <strong>Das offizielle Theme für die Liberalen Hochschulgruppen.</strong> Jede Verwendung außerhalb der vorgesehenen Webseiten bedarf der vorherigen Einwilligung durch den Bundesverband Liberaler Hochschulgruppen sowie den Autoren. <em>Für Bugs oder Verbesserungen:</em> <a href="https://github.com/MxnWgd/lhg-theme/issues" title="Github">Github</a>.
-  Version: 2.1
+	License: Das Theme darf frei auf den Webseiten aller Mitgliedsgruppen im Bundesverband Liberaler Hochschulgruppen verwendet werden. Jede Verwendung außerhalb der vorgesehenen Webseiten bedarf der vorherigen Einwilligung durch den Bundesverband Liberaler Hochschulgruppen sowie den Autoren. Änderungen am Theme sind nur mit Zustimmung des Bundesverbands Liberaler Hochschulgruppen sowie den Autoren zulässig.
+  Version: 2.2
 	Requires at least: 6.0
+	Tested up to: 6.1.1
 	Requires PHP: 7.4
-	Tested up to: 6.1
   Text Domain: lhg
 */
 
@@ -359,6 +360,7 @@ figure,
 .wp-block-image,
 .wp-block-pullquote {
 	margin: 30px auto;
+	max-width: 100%;
 	display: block;
 }
 
@@ -373,6 +375,59 @@ object::-webkit-scrollbar-thumb {
 	border-radius: 5px;
 	background: linear-gradient(180deg, var(--dark-accent-color), var(--light-accent-color));
 }
+
+iframe.not-loaded {
+	height: 0;
+	margin: 0;
+}
+
+.iframe-hint {
+	width: 100%;
+	height: auto;
+	padding: 20px;
+	background-color: var(--element-accent-color);
+	color: var(--element-text-color);
+}
+
+.iframe-hint::selection,
+.iframe-hint ::selection {
+	background-color: var(--element-text-color);
+	color: var(--element-accent-color);
+}
+
+.iframe-hint .iframe-hint-title {
+	margin: 0;
+}
+
+.iframe-hint .iframe-accept-button,
+.iframe-hint .iframe-all-accept-button {
+	display: block;
+	margin: 15px 0;
+	color: var(--element-accent-color);
+	background-color: var(--element-text-color);
+	transition: transform 0.3s ease;
+	font-size: 1.2em;
+}
+
+.iframe-hint .iframe-accept-button:hover,
+.iframe-hint .iframe-accept-button:focus,
+.iframe-hint .iframe-all-accept-button:hover,
+.iframe-hint .iframe-all-accept-button:focus {
+	color: var(--element-accent-color);
+	background-color: var(--element-text-color);
+	transform: scale(1.1	);
+}
+
+.iframe-hint .iframe-dest {
+	margin: 5px 0;
+	font-style: italic;
+	display: block
+}
+
+.iframe-hint .small {
+	font-size: 0.8em;
+}
+
 
 .wp-block-image {
 	text-align: center;
@@ -424,6 +479,16 @@ hr,
 .dark-background hr,
 .dark-background .wp-block-separator {
 	border-color: var(--light-accent-color);
+}
+
+.wp-block-file,
+.wp-block-file:not(.wp-element-button) {
+	font-size: 1.1em;
+}
+
+.wp-block-file a.wp-block-file__button,
+.dark-background .wp-block-file a.wp-block-file__button {
+  font-size: 1.4em;
 }
 
 /*-----------------------------------------------
@@ -660,22 +725,23 @@ select {
 	font-size: inherit;
 	min-width: 150px;
 	width: 100%;
-	background-image: linear-gradient(var(--dark-accent-color) 0%, var(--dark-accent-color) 100%);
-	background-position: 0 100%;
-  background-repeat: repeat-x;
-  background-size: 2px 2px;
+	background-image: url('img/sort-down-solid.svg'), linear-gradient(var(--dark-accent-color) 0%, var(--dark-accent-color) 100%);
+	background-position: 100% 30%, 0 100%;
+	background-repeat: no-repeat, repeat-x;
+	background-size: 25px 50%, 2px 2px;
 	transition: background-size 0.3s ease;
 	-webkit-appearance: none;
+	position: relative;
 }
 
 .dark-background select {
-	background-image: linear-gradient(var(--light-accent-color) 0%, var(--light-accent-color) 100%);
+	background-image: url('img/sort-down-solid-light.svg'), linear-gradient(var(--light-accent-color) 0%, var(--light-accent-color) 100%);
 	color: var(--bright-text-color);
 }
 
 select:focus,
 select:focus-within {
-	background-size: 2px 5px;
+	background-size: 25px 50%, 2px 5px;
 	outline: none;
 }
 
@@ -2563,13 +2629,16 @@ details.persons-wrapper-description summary::-webkit-details-marker {
 	transition: visibility 0s 0.3s ease, height 0s 0.3s ease, opacity 0.3s 0s ease;
 }
 
-.resolution-filter-select,
-.dark-background .resolution-filter-select {
-	background-image: none;
+.resolution-filter-select {
+	background-image: url('img/sort-down-solid.svg');
 	color: inherit;
 	opacity: 0.8;
 	font-weight: bold;
 	margin: 10px 0;
+}
+
+.dark-background .resolution-filter-select {
+	background-image: url('img/sort-down-solid-light.svg');
 }
 
 .resolution-filter-select:not(:last-of-type) {
